<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Positioning System</string>
    <string name="action_settings">Settings</string>
    <string name="title">GPS</string>
    <string name="latitude">Lat:</string>
    <string name="longitude">Lon:</string>
    <string name="latitude_value">0</string>
    <string name="longitude_value">0</string>
    <string name="gps_image">Imagem bonitinha de GPS</string>
    <string name="last_positions">Últimas posições</string>
    <string name="last_position_01">Last position 01</string>
    <string name="last_position_02">Last position 02</string>
    <string name="update_coordinates">Atualizar GPS</string>
    <string name="accelerometer">Acelerômetro</string>
    <string name="update_accelerometer">Atualizar acelerômetro</string>
    <string name="accel_x">X: </string>
    <string name="accel_y">Y: </string>
    <string name="accel_z">Z: </string>
    <string name="value_accel_x">Aceleração em X</string>
    <string name="value_accel_y">Aceleração em Y</string>
    <string name="value_accel_z">Aceleração em Z</string>
    <string name="start_sensors">Iniciar sensores</string>
    <string name="start_server">Conectar</string>
    <string name="host_port">Host:Porta</string>
    <string name="host_port_hint">186.193.7.38:6001</string>
    <string name="buttonMapsText">Mapa</string>
    <string name="hostmessage">HostMessage</string>
    <string name="settings">Settings</string>

    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    
    <string name="pref_send_report">Send crash reports</string>
    <string name="pref_send_report_summary">Helps to fix bugs</string>
    <string name="connection_pref_sync_frequency">Connection sync frequency</string>
    <string name="screen_pref_sync_frequency">Screen sync frequency</string>
    <string name="connection_pref_sync_frequency_summary">Set the connection sync frequency</string>
    <string name="screen_pref_sync_frequency_summary">Set the screen sync frequency</string>
    <string name="pref_host">Host IP</string>
    <string name="pref_set_host">Set your host ip</string>
    <string name="pref_port">Host port</string>
    <string name="pref_set_port">Set host port</string>
    <string name="pref_host_default">186.193.7.38</string>
    <string name="pref_port_default">6001</string>
    <string name="connection_settings">Connection</string>
    <string name="pref_update_setting">Update Settings</string>
    <string name="connect">Conectar</string>
</resources>