<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
 
    <PreferenceCategory android:title="@string/connection_settings" >
        <EditTextPreference
                android:title="@string/pref_host"
                android:summary="@string/pref_set_host"
                android:defaultValue="@string/pref_host_default"
                android:key="prefHost"/>
        <EditTextPreference
                android:title="@string/pref_port"
                android:summary="@string/pref_set_port"
                android:defaultValue="@string/pref_port_default"
                android:key="prefPort"/>
    </PreferenceCategory>
     
    <PreferenceCategory android:title="@string/pref_update_setting" >
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="prefSendReport"
            android:summary="@string/pref_send_report_summary"
            android:title="@string/pref_send_report" >
        </CheckBoxPreference>
 
        <ListPreference
            android:key="connectionPrefSyncFrequency"
            android:defaultValue="5000"
            android:entries="@array/connectionSyncFrequency"
            android:summary="@string/connection_pref_sync_frequency_summary"
            android:entryValues="@array/connectionSyncFrequencyValues"
            android:title="@string/connection_pref_sync_frequency" />
        
        <ListPreference
            android:key="screenPrefSyncFrequency"
            android:defaultValue="5000"
            android:entries="@array/screenSyncFrequency"
            android:summary="@string/screen_pref_sync_frequency_summary"
            android:entryValues="@array/screenSyncFrequencyValues"
            android:title="@string/screen_pref_sync_frequency" />
    </PreferenceCategory>
 
</PreferenceScreen>